# GameEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.conf  enemy_rl_final_model  enemy_rl_range_model  enemy_rl_shoot_model  enemy_rl_turn_model  main.cpp  policy_weights.pth
.githooks/: init-hooks.sh  pre-commit  pre-push
.github/workflows/: cmake-multi-platform.yml
AI/: AI_AWS.py  AI_Mode.py  AI_Normal.py  AI_RL.py  requirements.txt
RL/: data  policy.optimizer.pth  policy.pth  system_info.txt
assets/: BASEmodel.fbx  Player E04.fbx  cube.fbx  untitled.fbx
assets/Skybox/fskybg/source/: background.fbx
assets/objects/: Main_model.fbx  Main_model_new.fbx  bullet.fbx
assets/terrain/: arena.fbx  test_floor.fbx
assets/terrain/dry_riverbed_rock/textures/: dry_riverbed_rock_nor_gl_1k.exr  dry_riverbed_rock_rough_1k.exr
include/: Engine.h  Input.h  Matrix4f.h  Mesh.h  Quaternion.h  RenderUtil.h  Timer.h  Vector2f.h  Vector3f.h  Vertex.h  Window.h  shaderIO.h
include/Math/: Quaternion.h  Vector2f.h
include/components/: AnimationComponent.h  ArcBall.h  BaseCamera.h  BaseLight.h  Camera.h  CameraObject.h  DirectionalLight.h  EnemyEntity.h  EnemyPlayerEntity.h  Entity.h  FollowComponent.h  FreeLook.h  FreeMove.h  Game.h  GameComponent.h  GameObject.h  LightSources.h  LookAtComponent.h  MeshRenderer.h  Person.h  PlayerEntity.h  PlayerMovement.h  PointLight.h  SharedGlobals.h  Skybox.h  SpotLight.h  Terrain.h
include/core/: Camera.h  Engine.h  Input.h  RenderUtil.h  SharedGlobals.h  SocketManager.h  Timer.h  Window.h
include/game/: Game.h  GameComponent.h  GameObject.h  MeshRenderer.h  TestGame.h
include/glad/: glad.h
include/glfw/: .gitattributes
include/graphics/: Attenuation.h  BaseLight.h  BasicShader.h  DirectionalLight.h  ForwardAmbient.h  ForwardAnimated.h  ForwardAnimation.h  ForwardDirectional.h  ForwardPoint.h  ForwardSpot.h  Material.h  Mesh.h  PhongShader.h  PointLight.h  RenderingEngine.h  Shader.h  ShaderIO.h  Specular.h  SpotLight.h  Texture.h  Vertex.h
include/graphics/mesh_models/: FBXModel.h  IndexedModel.h  OBJModel.h
include/graphics/resource_management/: MeshResource.h  ShaderResource.h  TextureResource.h
include/math/: Matrix4f.h  Quaternion.h  Transform.h  Vector2f.h  Vector3f.h
include/misc/: Log.h  SafeQueue.h
include/multiplayer/: AWS.h  MM.h
include/physics/: Bone.h  Collision.h  Skeleton.h
server/: server.py
shaders/: forwardAmbient.frag  forwardAmbient.vert  forwardAnimated.frag  forwardAnimated.vert  forwardAnimation.frag  forwardAnimation.vert  forwardDirectional.frag  forwardPoint.frag  forwardPoint.vert  forwardSpot.frag  fragShader.frag  fragShader1.frag  fragShader2.frag  fragment.frag  phongFragShader.frag  phongShader.vert  phongVertShader.vert  vertShader.vert  vertex.vert
src/: Engine.cpp  Input.cpp  Mesh.cpp  RenderUtil.cpp  Timer.cpp  Vertex.cpp  Window.cpp  glad.c  shaderIO.cpp  triangle_mesh.cpp
src/Math/: Matrix4f.cpp  Quaternion.cpp  Vector2f.cpp  Vector3f.cpp
src/components/: Camera.cpp  GameObject.cpp  LightSources.cpp  MeshRenderer.cpp  SharedGlobals.cpp
src/core/: Camera.cpp  Engine.cpp  Input.cpp  RenderUtil.cpp  SharedGlobals.cpp  Timer.cpp  Window.cpp
src/game/: Game.cpp  GameObject.cpp  MeshRenderer.cpp  TestGame.cpp
src/graphics/: BasicShader.cpp  ForwardAmbient.cpp  ForwardAnimated.cpp  ForwardAnimation.cpp  ForwardDirectional.cpp  ForwardPoint.cpp  ForwardSpot.cpp  Material.cpp  Mesh.cpp  PhongShader.cpp  RenderingEngine.cpp  Shader.cpp  ShaderIO.cpp  Texture.cpp  Vertex.cpp
src/graphics/mesh_models/: FBXModel.cpp  OBJModel.cpp
src/graphics/resource_management/: MeshResource.cpp  ShaderResource.cpp  TextureResource.cpp
src/math/: Matrix4f.cpp  Quaternion.cpp  Transform.cpp  Vector2f.cpp  Vector3f.cpp
src/misc/: glad.c
src/multiplayer/: AWS.cpp  MM.cpp
src/physics/: Collision.cpp  Skeleton.cpp
tests/: CMakeLists.txt
tests/core/: Camera_test.cpp  Input_test.cpp  RenderUtil_test.cpp  Timer_test.cpp
tests/graphics/: BasicShader_test.cpp  Material_test.cpp  Mesh_test.cpp  Shader_test.cpp  Texture_test.cpp  Vertex_test.cpp
tests/math/: Matrix4f_test.cpp  Quaternion_test.cpp  Transform_test.cpp  Vector2f_test.cpp  Vector3f_test.cpp
